[package]
name = "ruv-monitor"
version = "0.1.0"
edition = "2021"

# Описание
authors = ["Ты"]
description = "Мониторинг RUV/XLM пула и курса в рублях"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
